--- a/Android/res/layout/activity_splash.xml
+++ b/Android/res/layout/activity_splash.xml
@@ -5,14 +5,17 @@
     tools:context="il.co.onthefly.SplashActivity" 
     tools:ignore="MergeRootFrame" 
     android:id="@+id/container"
-     >
+    android:background="@drawable/splash" >
 
-<ImageView 
-    
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    
-    android:id="@+id/splash_logo"/>
-
+    <TextView
+        android:id="@+id/fullscreen_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:keepScreenOn="true"
+        android:text=""
+        android:textColor="#33b5e5"
+        android:textSize="50sp"
+        android:textStyle="bold" />
 
 </FrameLayout>
