--- a/Android/res/layout/activity_login.xml
+++ b/Android/res/layout/activity_login.xml
@@ -3,15 +3,24 @@
     xmlns:facebook="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:padding="20dp" >
+    android:background="@drawable/background"
+    android:orientation="vertical" >
+
+    <Button
+        android:id="@+id/banner_connect"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="5dp"
+        android:gravity="left" />
 
     <com.facebook.widget.LoginButton
         android:id="@+id/button_login_facebook"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="30dp"
         android:layout_marginTop="5dp"
+        android:gravity="left"
         facebook:confirm_logout="false"
         facebook:fetch_user_info="true" />
 
