--- a/Android/res/values/styles.xml
+++ b/Android/res/values/styles.xml
@@ -3,14 +3,17 @@
     <!--
         Base application theme for API 11+. This theme completely replaces
         AppBaseTheme from res/values/styles.xml on API 11+ devices.
+
     -->
     <style name="AppBaseTheme" parent="android:Theme.Holo.Light">
         <!-- API 11 theme customizations can go here. -->
     </style>
 
-</resources>
-<!--  
+    <style name="FacebookLoginButton">
+        <item name="android:text">""</item>
+    </style>
 
+</resources><!--
     <style name="OnTheFly">
         <item name="android:actionBarTabStyle">@style/OnTheFly.ActionBar.Tab</item>
         <item name="actionBarTabStyle">@style/OnTheFly.ActionBar.Tab</item>
@@ -19,4 +22,5 @@
     <style name="OnTheFly.ActionBar.Tab">
         <item name="android:background">@drawable/tab_bar_background</item>
     </style>
+
 -->
