--- a/Android/res/layout/activity_feed.xml
+++ b/Android/res/layout/activity_feed.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@android:color/transparent"
-        android:dividerHeight="10.0sp" >
+        android:dividerHeight="10.0sp"
+        android:background="#d9d9d9" >
     </ListView>
 
 </LinearLayout>
