--- a/Android/res/layout/user_list_item.xml
+++ b/Android/res/layout/user_list_item.xml
@@ -1,58 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
-
-    <!-- User Photo -->
-
-    <ImageView
-        android:id="@+id/user_img"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="2" 
-        android:src="@drawable/ic_launcher"/>
-
-    <!-- User Details -->
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_weight="1.97"
+    android:background="#FFFFFF"
+    android:paddingBottom="4dp" >
 
     <LinearLayout
-        android:id="@+id/left_side_user_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/right_side_user_item"
-        android:layout_weight="6"
-        android:orientation="vertical" >
+        android:id="@+id/linearLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
-        <!-- Name -->
+        <ImageView
+            android:id="@+id/user_img"
+            android:layout_width="75dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_weight="0.63"
+            android:src="@drawable/ic_launcher" />
 
-        <TextView
-            android:id="@+id/user_item_name"
+        <LinearLayout
+            android:id="@+id/left_side_user_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="User Name"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textStyle="bold" />
+            android:layout_weight="6"
+            android:orientation="vertical" >
 
-        <!-- Details -->
+            <TextView
+                android:id="@+id/user_item_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="4dp"
+                android:text="User Name, Age"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <TextView
-            android:id="@+id/user_item_details"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="User details..."
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-        <!-- Review rank bar -->
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:columnCount="2"
+                android:rowCount="3" >
 
+                <ImageView
+                    android:id="@+id/detail_image0"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_column="0"
+                    android:layout_gravity="center"
+                    android:layout_row="0"
+                    android:src="@drawable/ic_launcher" />
+
+                <TextView
+                    android:id="@+id/detail_text0"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"
+                    android:layout_gravity="left|center_vertical"
+                    android:layout_row="0"
+                    android:paddingLeft="4dp" />
+
+                <ImageView
+                    android:id="@+id/detail_image1"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_column="0"
+                    android:layout_gravity="center"
+                    android:layout_row="1"
+                    android:src="@drawable/ic_launcher" />
+
+                <TextView
+                    android:id="@+id/detail_text1"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"
+                    android:layout_gravity="left|center_vertical"
+                    android:layout_row="1"
+                    android:paddingLeft="4dp" />
+
+                <ImageView
+                    android:id="@+id/detail_image2"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_column="0"
+                    android:layout_gravity="center"
+                    android:layout_row="2"
+                    android:src="@drawable/ic_launcher" />
+
+                <TextView
+                    android:id="@+id/detail_text2"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"
+                    android:layout_gravity="left|center_vertical"
+                    android:layout_row="2"
+                    android:paddingLeft="4dp" />
+            </GridLayout>
+        </LinearLayout>
     </LinearLayout>
 
-    <!-- Like -->
-
-    <Button
+    <TextView
+        android:id="@+id/user_item_timeLeft"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|right"
-        android:gravity="center"
-		android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Ping!" />
+        android:layout_alignParentRight="true"
+        android:text="20 min wait!"
+        android:textColor="#c00000" />
 
-</LinearLayout>
+</RelativeLayout>
