--- a/Android/res/menu/main_activity_actions.xml
+++ b/Android/res/menu/main_activity_actions.xml
@@ -1,13 +1,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    
+
     <!-- Map -->
-    <item android:id="@+id/action_search"
-          android:icon="@drawable/ic_map"
-          android:title="@string/action_map"
-          android:showAsAction="ifRoom" />
-    
+    <item
+        android:id="@+id/action_map"
+        android:icon="@drawable/ic_map"
+        android:showAsAction="ifRoom"
+        android:title="@string/action_map"/>
+
     <!-- Settings -->
-    <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
-          android:showAsAction="never" />
+    <item
+        android:id="@+id/action_settings"
+        android:icon="@drawable/ic_settings"
+        android:showAsAction="never"
+        android:title="@string/action_settings"/>
+
 </menu>
