--- a/Android/res/layout/activity_feed.xml
+++ b/Android/res/layout/activity_feed.xml
@@ -19,9 +19,10 @@
         </ListView>
     </LinearLayout>
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/feed_fab"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         android:src="@drawable/ic_fab"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
