--- a/Android/res/layout/user_list_item.xml
+++ b/Android/res/layout/user_list_item.xml
@@ -17,7 +17,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="0.63"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/ic_user" />
 
         <LinearLayout
             android:id="@+id/left_side_user_item"
