--- a/Android/res/layout/user_list_item.xml
+++ b/Android/res/layout/user_list_item.xml
@@ -47,7 +47,8 @@
                     android:layout_column="0"
                     android:layout_gravity="center"
                     android:layout_row="0"
-                    android:src="@drawable/ic_launcher" />
+                    android:src="@drawable/ic_launcher"
+                    android:paddingLeft="3dp" />
 
                 <TextView
                     android:id="@+id/detail_text0"
@@ -64,7 +65,8 @@
                     android:layout_column="0"
                     android:layout_gravity="center"
                     android:layout_row="1"
-                    android:src="@drawable/ic_launcher" />
+                    android:src="@drawable/ic_launcher" 
+                    android:paddingLeft="3dp" />
 
                 <TextView
                     android:id="@+id/detail_text1"
@@ -81,7 +83,8 @@
                     android:layout_column="0"
                     android:layout_gravity="center"
                     android:layout_row="2"
-                    android:src="@drawable/ic_launcher" />
+                    android:src="@drawable/ic_launcher" 
+                    android:paddingLeft="3dp" />
 
                 <TextView
                     android:id="@+id/detail_text2"
@@ -100,6 +103,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:text="20 min wait!"
-        android:textColor="#c00000" />
+        android:textColor="#c00000" 
+        android:paddingRight="3dp"/>
 
 </RelativeLayout>
