--- a/Android/res/layout/activity_login.xml
+++ b/Android/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:background="#0070C0"
         android:clickable="true"
         android:orientation="vertical" >
@@ -46,7 +46,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_facebook" />
+            android:src="@drawable/ic_facebook" 
+            android:layout_margin="5dp"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -65,7 +66,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_google_plus" />
+            android:src="@drawable/ic_google_plus"
+            android:layout_margin="5dp" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -84,7 +86,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_twitter" />
+            android:src="@drawable/ic_twitter"
+            android:layout_margin="5dp" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -103,7 +106,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_linkedin" />
+            android:src="@drawable/ic_linkedin" 
+            android:layout_margin="5dp"/>
     </RelativeLayout>
 
 </LinearLayout>
