--- a/Android/res/layout/user_list_item.xml
+++ b/Android/res/layout/user_list_item.xml
@@ -47,7 +47,8 @@
                     android:layout_column="0"
                     android:layout_gravity="center"
                     android:layout_row="0"
-                    android:src="@drawable/ic_launcher" />
+                    android:src="@drawable/ic_launcher"
+                    android:visibility="invisible" />
 
                 <TextView
                     android:id="@+id/detail_text0"
@@ -55,7 +56,9 @@
                     android:layout_column="1"
                     android:layout_gravity="left|center_vertical"
                     android:layout_row="0"
-                    android:paddingLeft="4dp" />
+                    android:paddingLeft="4dp" 
+                    android:visibility="invisible" />
+
 
                 <ImageView
                     android:id="@+id/detail_image1"
@@ -64,7 +67,9 @@
                     android:layout_column="0"
                     android:layout_gravity="center"
                     android:layout_row="1"
-                    android:src="@drawable/ic_launcher" />
+                    android:src="@drawable/ic_launcher" 
+                    android:visibility="invisible" />
+
 
                 <TextView
                     android:id="@+id/detail_text1"
@@ -72,7 +77,9 @@
                     android:layout_column="1"
                     android:layout_gravity="left|center_vertical"
                     android:layout_row="1"
-                    android:paddingLeft="4dp" />
+                    android:paddingLeft="4dp"
+                    android:visibility="invisible" />
+
 
                 <ImageView
                     android:id="@+id/detail_image2"
@@ -81,7 +88,9 @@
                     android:layout_column="0"
                     android:layout_gravity="center"
                     android:layout_row="2"
-                    android:src="@drawable/ic_launcher" />
+                    android:src="@drawable/ic_launcher" 
+                    android:visibility="invisible" />
+
 
                 <TextView
                     android:id="@+id/detail_text2"
@@ -89,7 +98,9 @@
                     android:layout_column="1"
                     android:layout_gravity="left|center_vertical"
                     android:layout_row="2"
-                    android:paddingLeft="4dp" />
+                    android:paddingLeft="4dp" 
+                    android:visibility="invisible" />
+
             </GridLayout>
         </LinearLayout>
     </LinearLayout>
