--- a/Android/res/layout/activity_chat.xml
+++ b/Android/res/layout/activity_chat.xml
@@ -4,11 +4,14 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical" >
-    
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="50sp"
-        android:text="CHAT"/>
+
+    <ListView
+        android:id="@+id/list_chat"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10.0sp" 
+        android:background="#d9d9d9">
+    </ListView>
+
 </LinearLayout>
