--- a/Android/res/layout/activity_add_post.xml
+++ b/Android/res/layout/activity_add_post.xml
@@ -55,7 +55,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/dialogButtonOK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button" />
