--- a/Android/res/layout/activity_feed.xml
+++ b/Android/res/layout/activity_feed.xml
@@ -27,6 +27,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_margin="16dp"
-        android:background="@android:color/transparent" />
+        android:background="@android:color/transparent" 
+        android:clickable="true"/>
 
 </RelativeLayout>
