--- a/Android/res/layout/activity_login.xml
+++ b/Android/res/layout/activity_login.xml
@@ -13,11 +13,12 @@
         android:layout_marginTop="30dp"
         android:background="#C00000"
         android:paddingBottom="5dp"
-        android:paddingLeft="15dp"
+        android:paddingLeft="20dp"
         android:paddingRight="10dp"
         android:paddingTop="5dp"
         android:text="Connect"
-        android:textColor="#FFFFFF" />
+        android:textColor="#FFFFFF"
+        android:textSize="16dp"/>
 
     <RelativeLayout
         android:layout_width="fill_parent"
