--- a/Android/res/layout/activity_feed.xml
+++ b/Android/res/layout/activity_feed.xml
@@ -3,6 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+    <ProgressBar
+        android:id="@+id/progress_feed"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,10 +29,10 @@
         android:id="@+id/feed_fab"
         android:layout_width="55dp"
         android:layout_height="55dp"
-        android:src="@drawable/ic_fab"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_margin="16dp"
-        android:background="@android:color/transparent" />
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_fab" />
 
 </RelativeLayout>
