--- a/Android/res/layout/user_list_item.xml
+++ b/Android/res/layout/user_list_item.xml
@@ -2,28 +2,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:layout_weight="1.97"
-    android:background="#FFFFFF"
-    android:paddingBottom="4dp" >
+    android:layout_marginBottom="4dp"
+    android:background="#FFFFFF" >
 
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <ImageView
+        <com.facebook.widget.ProfilePictureView
             android:id="@+id/user_img"
             android:layout_width="75dp"
-            android:layout_height="match_parent"
+            android:layout_height="75dp"
             android:layout_gravity="center"
-            android:layout_weight="0.63"
             android:src="@drawable/ic_user" />
 
         <LinearLayout
             android:id="@+id/left_side_user_item"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="6"
             android:orientation="vertical" >
 
             <TextView
@@ -47,10 +44,9 @@
                     android:layout_column="0"
                     android:layout_gravity="center"
                     android:layout_row="0"
+                    android:paddingLeft="3dp"
                     android:src="@drawable/ic_launcher"
-                    android:visibility="invisible" 
-                    android:paddingLeft="3dp" />
-
+                    android:visibility="invisible" />
 
                 <TextView
                     android:id="@+id/detail_text0"
@@ -58,9 +54,8 @@
                     android:layout_column="1"
                     android:layout_gravity="left|center_vertical"
                     android:layout_row="0"
-                    android:paddingLeft="4dp" 
+                    android:paddingLeft="4dp"
                     android:visibility="invisible" />
-
 
                 <ImageView
                     android:id="@+id/detail_image1"
@@ -69,9 +64,9 @@
                     android:layout_column="0"
                     android:layout_gravity="center"
                     android:layout_row="1"
-                    android:src="@drawable/ic_launcher" 
-                    android:visibility="invisible" 
-                    android:paddingLeft="3dp" />
+                    android:paddingLeft="3dp"
+                    android:src="@drawable/ic_launcher"
+                    android:visibility="invisible" />
 
                 <TextView
                     android:id="@+id/detail_text1"
@@ -82,7 +77,6 @@
                     android:paddingLeft="4dp"
                     android:visibility="invisible" />
 
-
                 <ImageView
                     android:id="@+id/detail_image2"
                     android:layout_width="15dp"
@@ -90,9 +84,9 @@
                     android:layout_column="0"
                     android:layout_gravity="center"
                     android:layout_row="2"
-                    android:src="@drawable/ic_launcher" 
-                    android:visibility="invisible" 
-                    android:paddingLeft="3dp" />
+                    android:paddingLeft="3dp"
+                    android:src="@drawable/ic_launcher"
+                    android:visibility="invisible" />
 
                 <TextView
                     android:id="@+id/detail_text2"
@@ -100,9 +94,8 @@
                     android:layout_column="1"
                     android:layout_gravity="left|center_vertical"
                     android:layout_row="2"
-                    android:paddingLeft="4dp" 
+                    android:paddingLeft="4dp"
                     android:visibility="invisible" />
-
             </GridLayout>
         </LinearLayout>
     </LinearLayout>
@@ -112,8 +105,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:paddingRight="3dp"
         android:text="20 min wait!"
-        android:textColor="#c00000" 
-        android:paddingRight="3dp"/>
+        android:textColor="#c00000" />
 
 </RelativeLayout>
