--- a/Android/res/layout/activity_add_post.xml
+++ b/Android/res/layout/activity_add_post.xml
@@ -7,22 +7,24 @@
     <ExpandableListView
         android:id="@+id/expandableListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="150dp" />
 
     <EditText
         android:id="@+id/textBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:clickable="true"
         android:ems="10"
-        android:inputType="textMultiLine" >
+        android:inputType="textMultiLine"
+        android:padding="10dp" >
     </EditText>
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal"
         android:orientation="horizontal"
-        android:layout_gravity="center_horizontal" >
+        android:gravity="center_horizontal" >
 
         <Button
             android:id="@+id/dialogButtonOK"
