--- a/Android/res/layout/list_item.xml
+++ b/Android/res/layout/list_item.xml
@@ -3,15 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="55dip"
     android:orientation="vertical" >
- 
+
     <TextView
         android:id="@+id/lblListItem"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="5dp"
         android:paddingBottom="5dp"
-        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" 
-        android:textSize="15dp"
-        android:textColor="#000000/>
- 
+        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
+        android:paddingTop="5dp"
+        android:textColor="#000000"
+        android:textSize="15dp" />
+
 </LinearLayout>
