--- a/Android/res/layout/list_item.xml
+++ b/Android/res/layout/list_item.xml
@@ -12,6 +12,6 @@
         android:paddingBottom="5dp"
         android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" 
         android:textSize="15dp"
-        android:textColor="#000000/>
+        android:textColor="#000000"/>
  
 </LinearLayout>
