--- a/Android/res/layout/activity_people.xml
+++ b/Android/res/layout/activity_people.xml
@@ -5,13 +5,19 @@
     android:gravity="center"
     android:orientation="vertical" >
 
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true" />
+
     <ListView
         android:id="@+id/list_people"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#d9d9d9"
         android:divider="@android:color/transparent"
-        android:dividerHeight="10.0sp" 
-        android:background="#d9d9d9">
+        android:dividerHeight="4dp" >
     </ListView>
 
 </LinearLayout>
