--- a/Android/res/layout/chat_list_item.xml
+++ b/Android/res/layout/chat_list_item.xml
@@ -3,8 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_weight="1.97"
-    android:background="#FFFFFF"
-    android:paddingBottom="4dp" >
+    android:background="#FFFFFF" >
 
     <LinearLayout
         android:id="@+id/linearLayout1"
