--- a/Android/res/layout/activity_add_post.xml
+++ b/Android/res/layout/activity_add_post.xml
@@ -10,7 +10,7 @@
         android:layout_height="150dp" />
 
     <EditText
-        android:id="@+id/textBox"
+        android:id="@+id/addPosttextBox"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:clickable="true"
