--- a/Android/res/layout/activity_people.xml
+++ b/Android/res/layout/activity_people.xml
@@ -7,8 +7,8 @@
 
     <ProgressBar
         android:id="@+id/progress"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true" />
 
     <ListView
